--- a/scss/mainpage css/_reset.scss
+++ b/scss/mainpage css/_reset.scss
@@ -3,6 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+//MAIN
+body {
+  background-color: #0c0b0d;
+  color: #fff;
+  position: relative;
+}
 ul,
 ol {
   list-style: none;
