--- a/scss/mainpage css/style.css
+++ b/scss/mainpage css/style.css
@@ -39,10 +39,24 @@
   }
 }
 
+@media screen and (max-height: 550px), (max-width: 1250px) {
+  .morpContainer {
+    font-size: 3rem;
+  }
+  .word {
+    top: 8vh;
+  }
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #0c0b0d;
+  color: #fff;
+  position: relative;
 }
 
 ul,
@@ -55,38 +69,28 @@ a {
   color: #fff;
 }
 
-body {
-  background-color: #0c0b0d;
-  color: #fff;
-}
-
 nav {
   z-index: 1;
-  position: relative;
-  width: 100%;
+  position: absolute;
+  width: 50vw;
+  right: 0;
 }
 nav ul {
-  transform: rotate3d(0, 1, 0, -45deg) scale(1);
-  transform-origin: right center;
-  transform-style: preserve-3d;
-  animation: skrew 6s initial ease-in-out;
   position: absolute;
   top: 8vh;
-  right: 5vw;
+  right: 4vw;
+  animation: dropDown 2.5s;
 }
 nav ul li {
-  font: bold 45px/2.5 "Tourney";
+  font: bold 3rem/15vh "Tourney";
   letter-spacing: 2px;
-  transition: 1s;
+  transition: 2.5s;
+  transform-origin: right center;
   opacity: 0;
+  animation: rotate 2s;
+  animation-fill-mode: forwards;
 }
-nav ul li.nav-item {
-  opacity: 1;
-}
-nav ul li:hover.nav-item {
-  transform: scale(1.1);
-}
-nav ul li:hover.nav-item a {
+nav ul li:hover a {
   background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
 }
 
@@ -99,4 +103,31 @@ figure video {
   opacity: 0.6;
   -o-object-fit: fill;
      object-fit: fill;
+}
+
+@keyframes dropDown {
+  0% {
+    transform: translateY(-1000px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotateY(-80deg);
+  }
+  100% {
+    transform: rotateY(-6deg);
+  }
+}
+@media screen and (max-width: 1250px), (max-height: 600px) {
+  nav ul li {
+    font: bold 2rem/12vh "Tourney";
+  }
+}
+@media screen and (max-width: 850px) {
+  nav ul li {
+    font: bold 1rem/8vh "Tourney";
+  }
 }/*# sourceMappingURL=style.css.map */
