--- a/scss/view css/view.css
+++ b/scss/view css/view.css
@@ -23,12 +23,21 @@ a {
 
 header {
   width: 100%;
-  height: 150px;
+  height: 20vh;
   display: flex;
   padding: 0 7.5vw;
   align-items: center;
-  font: bold 2rem/1 "Tilt Prism";
+  font: bold 3rem/1 "Tilt Prism";
   border-bottom: 1px solid #fff;
+}
+header a.right-menu {
+  position: absolute;
+  right: 3vw;
+  top: 17vh;
+  font-size: 2.5rem;
+}
+header a:hover {
+  background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
 }
 
 figure {
@@ -36,11 +45,11 @@ figure {
   display: flex;
   align-items: center;
   text-align: center;
-  font: normal 1.5rem/1 "Tilt Prism";
+  font: normal 2rem/1 "Tourney";
 }
 figure img {
   width: 100%;
-  height: 50vh;
+  height: 30vh;
   -o-object-fit: fill;
      object-fit: fill;
 }
@@ -48,12 +57,12 @@ figure img {
 section {
   position: relative;
   width: 100%;
-  height: 50vh;
-  background-color: #fff;
+  height: 60vh;
+  overflow-y: hidden;
 }
 section div {
   width: 100%;
-  height: 50vh;
+  height: inherit;
   display: block;
   position: absolute;
   transform: translateY(50vh);
