--- a/scss/view css/view.css
+++ b/scss/view css/view.css
@@ -30,12 +30,6 @@ header {
   font: bold 3rem/1 "Tilt Prism";
   border-bottom: 1px solid #fff;
 }
-header a.right-menu {
-  position: absolute;
-  right: 3vw;
-  top: 17vh;
-  font-size: 2.5rem;
-}
 header a:hover {
   background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
 }
@@ -57,15 +51,45 @@ figure img {
 section {
   position: relative;
   width: 100%;
-  height: 60vh;
+  height: 75vh;
   overflow-y: hidden;
 }
 section div {
   width: 100%;
   height: inherit;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: absolute;
   transform: translateY(50vh);
+  transition: 1s;
   opacity: 0;
-  scroll-snap-align: initial;
+  font: normal 2rem/1 "Tourney";
+}
+section div figure img {
+  width: 35%;
+  height: 30vh;
+}
+
+section.emptyground {
+  width: 100%;
+  height: 75vh;
+}
+
+button {
+  position: fixed;
+  right: 3vw;
+  bottom: 5vh;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: #0c0b0d;
+  color: white;
+}
+button:hover {
+  transform: scale(1.05);
+}
+button:hover i {
+  transform: scale(1.05);
 }/*# sourceMappingURL=view.css.map */
