--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -18,13 +18,6 @@ header {
   font: bold 3rem/1 "Tilt Prism";
   border-bottom: 1px solid #fff;
   a {
-    &.right-menu {
-      position: absolute;
-      right: 3vw;
-      top: 17vh;
-      font-size: 2.5rem;
-    }
-
     &:hover {
       background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
     }
@@ -47,25 +40,49 @@ figure {
 section {
   position: relative;
   width: 100%;
-  height: 60vh;
+  height: 75vh;
   overflow-y: hidden;
   div {
     width: 100%;
     height: inherit;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: absolute;
     transform: translateY(50vh);
+    transition: 1s;
     opacity: 0;
-    // overflow-y: scroll;
-    scroll-snap-align: initial;
+    font: normal 2rem/1 "Tourney";
+    figure {
+      img {
+        width: 35%;
+        height: 30vh;
+      }
+    }
   }
 }
 
-//ANIMATION
+section.emptyground {
+  width: 100%;
+  height: 75vh;
+}
 
-// @keyframes scorllUP {
-//   0% {
-//   }
-//   100% {
-//   }
-// }
+button {
+  position: fixed;
+  right: 3vw;
+  bottom: 5vh;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: #0c0b0d;
+  color: white;
+  &:hover {
+    & {
+      transform: scale(1.05);
+    }
+    i {
+      transform: scale(1.05);
+    }
+  }
+}
