--- a/scss/drive css/drive.css
+++ b/scss/drive css/drive.css
@@ -1,48 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
-.morpContainer {
-  z-index: 2;
-  opacity: 0;
-  transition: 1.5s;
-  font-family: "Gajraj One", cursive;
-  font-size: 110px;
-  color: #fff;
-  filter: contrast(20) blur(1px);
-}
-
-.word {
-  position: absolute;
-  top: 10vh;
-  left: 35%;
-  transform: translate(-50%, -50%);
-  animation: word 8s infinite ease-in-out;
-}
-.word:nth-child(1) {
-  animation-delay: -8s;
-}
-.word:nth-child(2) {
-  animation-delay: -6.4s;
-}
-.word:nth-child(3) {
-  animation-delay: -4.8s;
-}
-.word:nth-child(4) {
-  animation-delay: -3.2s;
-}
-@keyframes word {
-  0%, 5%, 100% {
-    filter: blur(0px);
-    opacity: 1;
-  }
-  30%, 80% {
-    filter: blur(1em);
-    opacity: 0;
-  }
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #0c0b0d;
+  color: #fff;
+  position: relative;
 }
 
 ul,
@@ -59,14 +25,18 @@ body {
   background-color: #000;
 }
 body header {
+  position: relative;
   width: 100%;
-  height: 250px;
+  height: 20vh;
+  background-color: #000;
 }
 body header .logo {
   position: absolute;
-  left: 60px;
-  top: calc(1vh + 30px);
-  font-size: 40px;
+  left: 10%;
+  top: 50%;
+  transform: translateY(-50%);
+  font-family: "Tilt Prism";
+  font-size: 2.5rem;
   font-weight: bold;
   color: #fff;
 }
@@ -80,9 +50,9 @@ body header .logo .slideup {
 }
 body header .thema {
   position: absolute;
-  left: 50%;
-  transform: translateX(-160px);
-  top: calc(18vh + 30px);
+  right: 15%;
+  top: 50%;
+  transform: translateY(-50%);
   font-size: 18px;
   font-weight: normal;
 }
@@ -98,30 +68,6 @@ body header .thema ul li:not(:last-child) {
 }
 body header .thema ul li:hover {
   color: #fff260;
-}
-body header .btn--prev {
-  position: absolute;
-  top: calc(8vh + 30px);
-  right: 63px;
-  border: 1px solid #fff;
-  z-index: 9999;
-  border-radius: 50%;
-}
-body header .btn--prev:hover {
-  border-radius: 50%;
-  transition: 1s;
-  border: 1px solid #fff;
-}
-body header .btn--prev i {
-  width: 100%;
-  height: 100%;
-  font-size: 36px;
-  padding: 5px;
-}
-body header .btn--prev i:hover {
-  transform: translateX(50%) scale(1);
-  opacity: 1;
-  animation: slideLeftOutRightIn 1.5s infinite forwards;
 }
 @keyframes slideLeftOutRightIn {
   100% {
@@ -147,14 +93,42 @@ body header .btn--prev i:hover {
 }
 body figure video {
   width: 100%;
-  height: 50vh;
-  background-color: #fc0;
+  height: 86vh;
 }
 body #map {
+  position: relative;
   background-color: #f00;
   width: 100%;
-  height: 650px;
+  height: 580px;
   text-align: center;
   font-size: 60px;
   color: #fff;
+  margin: 0 auto;
+}
+body #map .image {
+  position: absolute;
+  top: 0;
+  width: 1090px;
+  height: 100%;
+  left: 50%;
+  transform: translateX(-545px);
+}
+body .sub-btn {
+  display: flex;
+  justify-content: space-between;
+  width: 1090px;
+  position: relative;
+  margin: 36px auto 0;
+}
+body .sub-btn .btn {
+  display: block;
+  background-color: #000;
+  width: 15%;
+  height: 100%;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+body .sub-btn .btn span {
+  color: #fff;
+  padding: 5px;
 }/*# sourceMappingURL=drive.css.map */
