--- a/scss/drive css/drive.scss
+++ b/scss/drive css/drive.scss
@@ -3,7 +3,7 @@
 //FONT
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
 // font-family: 'Gajraj One', cursive;
-// font-family: 'Tilt Prism', cursive;
+// font-family: 'Tilt Prism', cursive; //Header
 // font-family: 'Tourney', cursive;
 
 //  //
@@ -12,14 +12,18 @@ body {
 
   // Header //
   header {
+    position: relative;
     width: 100%;
-    height: 250px;
+    height: 20vh;
+    background-color: #000;
 
     .logo {
       position: absolute;
-      left: 60px;
-      top: calc(1vh + 30px);
-      font-size: 40px;
+      left: 10%;
+      top: 50%;
+      transform: translateY(-50%);
+      font-family: "Tilt Prism";
+      font-size: 2.5rem;
       font-weight: bold;
       color: #fff;
 
@@ -35,9 +39,9 @@ body {
     }
     .thema {
       position: absolute;
-      left: 50%;
-      transform: translateX(-160px);
-      top: calc(18vh + 30px);
+      right: 15%;
+      top: 50%;
+      transform: translateY(-50%);
       font-size: 18px;
       font-weight: normal;
 
@@ -54,32 +58,6 @@ body {
           &:hover {
             color: #fff260;
           }
-        }
-      }
-    }
-    .btn--prev {
-      position: absolute;
-      top: calc(8vh + 30px);
-      right: 63px;
-      border: 1px solid #fff;
-      z-index: 9999;
-      border-radius: 50%;
-
-      &:hover {
-        border-radius: 50%;
-        transition: 1s;
-        border: 1px solid #fff;
-      }
-      i {
-        width: 100%;
-        height: 100%;
-        font-size: 36px;
-        padding: 5px;
-
-        &:hover {
-          transform: translateX(50%) scale(1);
-          opacity: 1;
-          animation: slideLeftOutRightIn 1.5s infinite forwards;
         }
       }
     }
@@ -109,16 +87,48 @@ body {
 
   figure video {
     width: 100%;
-    height: 50vh;
-    background-color: #fc0;
+    height: 86vh;
   }
 
   #map {
+    position: relative;
     background-color: #f00;
     width: 100%;
-    height: 650px;
+    height: 580px;
     text-align: center;
+
     font-size: 60px;
     color: #fff;
+    margin: 0 auto;
+
+    .image {
+      position: absolute;
+      top: 0;
+      width: 1090px;
+      height: 100%;
+      left: 50%;
+      transform: translateX(-545px);
+    }
+  }
+  .sub-btn {
+    display: flex;
+    justify-content: space-between;
+    width: 1090px;
+    position: relative;
+    margin: 36px auto 0;
+
+    .btn {
+      display: block;
+      background-color: #000;
+      width: 15%;
+      height: 100%;
+      border: 1px solid #fff;
+      cursor: pointer;
+
+      span {
+        color: #fff;
+        padding: 5px;
+      }
+    }
   }
 }
