--- a/scss/palace css/palace.css
+++ b/scss/palace css/palace.css
@@ -1,1 +1,58 @@
-/*# sourceMappingURL=palace.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #0c0b0d;
+  color: #fff;
+  position: relative;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+header {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  padding: 0 7.5vw;
+  align-items: center;
+  font: bold 3rem/1 "Tilt Prism";
+  border-bottom: 1px solid #fff;
+}
+header a:hover {
+  background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
+}
+
+section {
+  width: 100%;
+  height: 1000px;
+}
+
+#commonUpButton {
+  position: fixed;
+  right: 3vw;
+  bottom: 5vh;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: #0c0b0d;
+  color: white;
+}
+#commonUpButton:hover {
+  transform: scale(1.05);
+}
+#commonUpButton:hover i {
+  transform: scale(1.05);
+}/*# sourceMappingURL=palace.css.map */
