--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -13,27 +13,25 @@ header {
   width: 100%;
   height: 20vh;
   display: flex;
+  justify-content: space-between;
   padding: 0 7.5vw;
   align-items: center;
-  font: bold 3rem/1 "Tilt Prism";
+  font: bold 3em/1 "Tilt Prism";
   border-bottom: 1px solid #fff;
+  ul {
+    display: flex;
+    li {
+      margin: 0 1vw;
+      font: bold 2rem/1 "Tilt Prism";
+    }
+  }
   a {
+    transition: 1s;
+    opacity: 0;
+
     &:hover {
       background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
     }
-  }
-}
-
-figure {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  font: normal 2rem/1 "Tourney";
-  img {
-    width: 100%;
-    height: 30vh;
-    object-fit: fill;
   }
 }
 
@@ -41,7 +39,22 @@ section {
   position: relative;
   width: 100%;
   height: 75vh;
-  overflow-y: hidden;
+  overflow: hidden;
+
+  figure {
+    width: 100%;
+    height: 45vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font: normal 2rem/1 "Tourney";
+    img {
+      width: 100%;
+      height: 45vh;
+      object-fit: fill;
+    }
+  }
+
   div {
     width: 100%;
     height: inherit;
@@ -52,6 +65,7 @@ section {
     transform: translateY(50vh);
     transition: 1s;
     opacity: 0;
+    text-align: center;
     font: normal 2rem/1 "Tourney";
     figure {
       img {
@@ -67,7 +81,7 @@ section.emptyground {
   height: 75vh;
 }
 
-button {
+#commonUpButton {
   position: fixed;
   right: 3vw;
   bottom: 5vh;
