--- a/scss/drive css/drive.css
+++ b/scss/drive css/drive.css
@@ -95,9 +95,11 @@ body figure video {
   width: 100%;
   height: 86vh;
 }
-body #map {
+body #two {
+  padding: 30px 0;
+}
+body #two .map {
   position: relative;
-  background-color: #f00;
   width: 100%;
   height: 580px;
   text-align: center;
@@ -105,7 +107,7 @@ body #map {
   color: #fff;
   margin: 0 auto;
 }
-body #map .image {
+body #two .map .image {
   position: absolute;
   top: 0;
   width: 1090px;
@@ -113,22 +115,51 @@ body #map .image {
   left: 50%;
   transform: translateX(-545px);
 }
-body .sub-btn {
+body #two .sub-btn {
   display: flex;
   justify-content: space-between;
   width: 1090px;
   position: relative;
   margin: 36px auto 0;
 }
-body .sub-btn .btn {
+body #two .sub-btn .btn {
   display: block;
   background-color: #000;
-  width: 15%;
+  width: 13%;
   height: 100%;
-  border: 1px solid #fff;
+  cursor: pointer;
+  opacity: 0.5;
+}
+body #two .sub-btn .btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 12%;
+  height: 3px;
+  background-color: #fff;
+}
+body #two .sub-btn .btn > span {
+  display: inline-block;
+  color: #fff;
+  font-size: 16px;
+  padding: 5px;
+  margin-top: 5px;
+}
+body #commonUpButton {
+  position: fixed;
+  right: 3vw;
+  bottom: 5vh;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: #0c0b0d;
+  color: white;
   cursor: pointer;
 }
-body .sub-btn .btn span {
-  color: #fff;
-  padding: 5px;
+body #commonUpButton:hover {
+  transform: scale(1.05);
+}
+body #commonUpButton:hover i {
+  transform: scale(1.05);
 }/*# sourceMappingURL=drive.css.map */
