--- a/scss/drive css/drive.scss
+++ b/scss/drive css/drive.scss
@@ -90,44 +90,79 @@ body {
     height: 86vh;
   }
 
-  #map {
-    position: relative;
-    background-color: #f00;
-    width: 100%;
-    height: 580px;
-    text-align: center;
+  #two {
+    padding: 30px 0;
+    .map {
+      position: relative;
+      width: 100%;
+      height: 580px;
+      text-align: center;
 
-    font-size: 60px;
-    color: #fff;
-    margin: 0 auto;
+      font-size: 60px;
+      color: #fff;
+      margin: 0 auto;
 
-    .image {
-      position: absolute;
-      top: 0;
+      .image {
+        position: absolute;
+        top: 0;
+        width: 1090px;
+        height: 100%;
+        left: 50%;
+        transform: translateX(-545px);
+      }
+    }
+    .sub-btn {
+      display: flex;
+      justify-content: space-between;
       width: 1090px;
-      height: 100%;
-      left: 50%;
-      transform: translateX(-545px);
+      position: relative;
+      margin: 36px auto 0;
+
+      .btn {
+        display: block;
+        background-color: #000;
+        width: 13%;
+        height: 100%;
+        cursor: pointer;
+        opacity: 0.5;
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          width: 12%;
+          height: 3px;
+          background-color: #fff;
+        }
+
+        & > span {
+          display: inline-block;
+          color: #fff;
+          font-size: 16px;
+          padding: 5px;
+          margin-top: 5px;
+        }
+      }
     }
   }
-  .sub-btn {
-    display: flex;
-    justify-content: space-between;
-    width: 1090px;
-    position: relative;
-    margin: 36px auto 0;
+  #commonUpButton {
+    position: fixed;
+    right: 3vw;
+    bottom: 5vh;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    border: 1px solid white;
+    background-color: #0c0b0d;
+    color: white;
+    cursor: pointer;
 
-    .btn {
-      display: block;
-      background-color: #000;
-      width: 15%;
-      height: 100%;
-      border: 1px solid #fff;
-      cursor: pointer;
-
-      span {
-        color: #fff;
-        padding: 5px;
+    &:hover {
+      & {
+        transform: scale(1.05);
+      }
+      i {
+        transform: scale(1.05);
       }
     }
   }
