--- a/scss/event css/event.scss
+++ b/scss/event css/event.scss
@@ -1,41 +1,76 @@
-body {
-  margin: 0;
-  height: 4000px;
-  a {
-    text-decoration: none;
-  }
+//RESET
+@import "reset3";
 
-  // ----------------- HEADER -------------------
-  header {
-    width: 100%;
-    height: 100px;
+//FONT
+@import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
+// font-family: 'Gajraj One', cursive;
+// font-family: 'Tilt Prism', cursive;
+// font-family: 'Tourney', cursive;
+
+//--------------- HEADER ---------------------
+
+header {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  font: bold 3rem/1 "Tilt Prism";
+  border-bottom: 1px solid #fff;
+
+  .inner {
     display: flex;
-    align-items: center;
-    position: relative;
-    padding: 0 20px;
-    justify-content: space-around;
+    padding: 0 7.5vw;
     z-index: 2;
 
     .logo {
-      color: white;
-      font-size: 36px;
     }
 
     .menu {
-      a {
-        color: white;
-        margin: 0 20px;
-      }
-    }
-
-    // -------------- SECTION-1 ---------------------
-    .section-1 {
       position: absolute;
-      top:-200px .inner {
-        position: relative;
-        .video {
+      right: 100px;
+      .menu__sub-menu {
+        display: flex;
+        li {
+          margin: 0 20px;
         }
       }
     }
+  }
+  a {
+    &:hover {
+      background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
+    }
+  }
+}
+
+// --------------- BUTTON ---------------------
+#commonUpButton {
+  position: fixed;
+  right: 3vw;
+  bottom: 5vh;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: #0c0b0d;
+  color: white;
+  &:hover {
+    & {
+      transform: scale(1.05);
+    }
+    i {
+      transform: scale(1.05);
+    }
+  }
+}
+
+// --------------- SECTION VIDEO ---------------------
+.video {
+  position: absolute;
+  top: -153px;
+  z-index: 1;
+  video {
+    background-size: cover;
+    width: 100%;
   }
 }
