feat. view페이지 애니메이션 및 기능 수정

--- a/scss/view css/view.css
+++ b/scss/view css/view.css
@@ -51,10 +51,12 @@ section {
   width: 100%;
   height: 75vh;
   overflow: hidden;
+  transition: 1s;
+  opacity: 0;
 }
 section figure {
   width: 100%;
-  height: 45vh;
+  height: 100%;
   display: flex;
   align-items: center;
   text-align: center;
@@ -69,9 +71,8 @@ section figure img {
 section div {
   width: 100%;
   height: inherit;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   position: absolute;
   transform: translateY(50vh);
   transition: 1s;
@@ -79,9 +80,22 @@ section div {
   text-align: center;
   font: normal 2rem/1 "Tourney";
 }
+section div figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
 section div figure img {
-  width: 35%;
-  height: 30vh;
+  width: 40%;
+  height: 40%;
+  margin-bottom: 10vh;
+  box-shadow: 0 5px 10px 0 white;
+}
+section div article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 section.emptyground {
@@ -99,6 +113,9 @@ section.emptyground {
   border: 1px solid white;
   background-color: #0c0b0d;
   color: white;
+}
+#commonUpButton:hover {
+  cursor: pointer;
 }
 #commonUpButton:hover {
   transform: scale(1.05);
