--- a/scss/event css/_reset3.scss
+++ b/scss/event css/_reset3.scss
@@ -6,10 +6,11 @@
 
 //MAIN
 body {
-  background-color: #0c0b0d;
+  // background-color: #0c0b0d;
   color: #fff;
   position: relative;
-  height: 4000px;
+  height: 100vh;
+  overflow: hidden;
 }
 ul,
 ol {
