--- a/scss/event css/event.scss
+++ b/scss/event css/event.scss
@@ -11,7 +11,7 @@
 
 header {
   width: 100%;
-  height: 20vh;
+  height: 100%;
   display: flex;
   align-items: center;
   font: bold 3rem/1 "Tilt Prism";
@@ -23,11 +23,14 @@ header {
     z-index: 2;
 
     .logo {
+      position: absolute;
+      top: 6vh;
     }
 
     .menu {
       position: absolute;
-      right: 100px;
+      top: 6vh;
+      right: 10vw;
       .menu__sub-menu {
         display: flex;
         li {
@@ -52,8 +55,9 @@ header {
   height: 2.5rem;
   border-radius: 50%;
   border: 1px solid white;
-  background-color: #0c0b0d;
+  background-color: rgb(8, 53, 53);
   color: white;
+  cursor: pointer;
   &:hover {
     & {
       transform: scale(1.05);
@@ -67,10 +71,52 @@ header {
 // --------------- SECTION VIDEO ---------------------
 .video {
   position: absolute;
-  top: -153px;
+  top: -140px;
   z-index: 1;
   video {
+    display: block;
     background-size: cover;
     width: 100%;
   }
+}
+
+// ------------------- SECTION ------------------------
+.section-1 {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  height: 100vh;
+  background-color: salmon;
+  z-index: 3;
+  transition: 0.8s;
+}
+
+.section-2 {
+  position: absolute;
+  // display: block;
+  top: 200%;
+  width: 100%;
+  height: 100vh;
+  background-color: skyblue;
+  z-index: 3;
+  transition: 0.8s;
+}
+
+.section-3 {
+  position: absolute;
+  // display: block;
+  top: 300%;
+  width: 100%;
+  height: 100vh;
+  background-color: beige;
+  z-index: 3;
+  transition: 0.8s;
+}
+
+// ------------------- PAGE ------------------------
+.page {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  color: black;
 }
