--- a/scss/palace css/palace.css
+++ b/scss/palace css/palace.css
@@ -28,10 +28,47 @@ header {
   padding: 0 7.5vw;
   align-items: center;
   font: bold 3rem/1 "Tilt Prism";
-  border-bottom: 1px solid #fff;
 }
 header a:hover {
   background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
+}
+header ul {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 70px;
+  right: 50px;
+}
+header ul li {
+  margin: 0px 60px;
+}
+
+figure {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+figure video {
+  width: 1500px;
+  height: 700px;
+  margin: 202px 0px 147px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 1;
+}
+figure .text {
+  position: absolute;
+  right: 6vw;
+  top: 15%;
+  transform: translateY(-50%);
+}
+figure .text p {
+  font: normal 7vw/1 "Tourney";
+  color: rgba(255, 129, 192, 0.892);
+  text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;
 }
 
 section {
