--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -15,17 +15,67 @@ header {
   padding: 0 7.5vw;
   align-items: center;
   font: bold 3rem/1 "Tilt Prism";
-  border-bottom: 1px solid #fff;
   a {
     &:hover {
       background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
     }
   }
+
+  ul {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 70px;
+    right: 50px;
+    li {
+      margin: 0px 60px;
+    }
+  }
+}
+
+figure {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;  //위랑 왼쪽에 안튀어나가게
+  left: 0;
+  overflow: hidden;
+
+  video {
+    width: 1500px;  
+    height: 700px;
+    margin: 202px 0px 147px;
+    object-fit: cover;
+    z-index: 1;
+
+   }
+  
+  .text {
+    position: absolute;
+    right: 6vw;
+    top: 15%;
+    transform: translateY(-50%);
+      p {
+      font: normal 7vw/1 "Tourney";
+      color: rgba(255, 129, 192, 0.892);
+      text-shadow: -2px 0 #000, 0 2px #000, 2px 0 #000, 0 -2px #000;
+    }
+  }
+
 }
 
 section {
   width: 100%;
   height: 1000px;
+}
+
+.kb {
+  .kb-container {
+    .kb-container-inner {
+
+    }
+  }
+
 }
 
 #commonUpButton {
