--- a/scss/event css/event.css
+++ b/scss/event css/event.css
@@ -9,7 +9,6 @@ body {
   color: #fff;
   position: relative;
   height: 100vh;
-  overflow: hidden;
 }
 
 ul,
@@ -28,7 +27,6 @@ header {
   display: flex;
   align-items: center;
   font: bold 3rem/1 "Tilt Prism";
-  border-bottom: 1px solid #fff;
 }
 header .inner {
   display: flex;
@@ -86,37 +84,72 @@ header a:hover {
 
 .section-1 {
   position: absolute;
-  top: 100%;
   width: 100%;
   height: 100vh;
-  background-color: salmon;
   z-index: 3;
   transition: 0.8s;
+  background-color: #0c0b0d;
+  position: absolute;
+  top: 100%;
+}
+.section-1 .container {
+  margin: 20px;
+}
+.section-1 .container .line-1,
+.section-1 .container .line-2 {
+  display: flex;
+  justify-content: center;
+}
+.section-1 .container .line-1 .element,
+.section-1 .container .line-2 .element {
+  background-color: skyblue;
+  width: 20vw;
+  height: 40vh;
+  margin: 20px 20px;
+}
+.section-1 .container .line-1 .element .content .title,
+.section-1 .container .line-2 .element .content .title {
+  font-size: 2em;
+  font-weight: bold;
+}
+.section-1 .container .line-1 .element .content .text,
+.section-1 .container .line-2 .element .content .text {
+  margin-top: 30px;
+}
+.section-1 .container .line-1 .element img,
+.section-1 .container .line-2 .element img {
+  width: 100%;
 }
 
 .section-2 {
   position: absolute;
-  top: 200%;
   width: 100%;
   height: 100vh;
-  background-color: skyblue;
   z-index: 3;
   transition: 0.8s;
+  background-color: green;
+  position: absolute;
+  top: 200%;
 }
 
 .section-3 {
   position: absolute;
-  top: 300%;
   width: 100%;
   height: 100vh;
-  background-color: beige;
   z-index: 3;
   transition: 0.8s;
+  background-color: skyblue;
+  position: absolute;
+  top: 300%;
 }
 
-.page {
+.section-4 {
+  position: absolute;
   width: 100%;
-  height: 100%;
-  position: relative;
-  color: black;
+  height: 100vh;
+  z-index: 3;
+  transition: 0.8s;
+  background-color: beige;
+  position: absolute;
+  top: 400%;
 }/*# sourceMappingURL=event.css.map */
