--- a/scss/event css/event.scss
+++ b/scss/event css/event.scss
@@ -15,7 +15,6 @@ header {
   display: flex;
   align-items: center;
   font: bold 3rem/1 "Tilt Prism";
-  border-bottom: 1px solid #fff;
 
   .inner {
     display: flex;
@@ -81,42 +80,78 @@ header {
 }
 
 // ------------------- SECTION ------------------------
+
 .section-1 {
   position: absolute;
-  top: 100%;
   width: 100%;
   height: 100vh;
-  background-color: salmon;
   z-index: 3;
   transition: 0.8s;
+  background-color: #0c0b0d;
+  position: absolute;
+  top: 100%;
+
+  .container {
+    margin: 20px;
+    .line-1,
+    .line-2 {
+      display: flex;
+      justify-content: center;
+      // position: absolute;
+      // top: 200px;
+      .element {
+        background-color: skyblue;
+        width: 20vw;
+        height: 40vh;
+        margin: 20px 20px;
+
+        .content {
+          .title {
+            font-size: 2em;
+            font-weight: bold;
+          }
+          .text {
+            margin-top: 30px;
+          }
+        }
+
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 .section-2 {
   position: absolute;
-  // display: block;
-  top: 200%;
   width: 100%;
   height: 100vh;
-  background-color: skyblue;
   z-index: 3;
   transition: 0.8s;
+  background-color: green;
+  position: absolute;
+  top: 200%;
 }
 
 .section-3 {
   position: absolute;
-  // display: block;
-  top: 300%;
   width: 100%;
   height: 100vh;
-  background-color: beige;
   z-index: 3;
   transition: 0.8s;
+  background-color: skyblue;
+  position: absolute;
+  top: 300%;
 }
 
-// ------------------- PAGE ------------------------
-.page {
+.section-4 {
+  position: absolute;
   width: 100%;
-  height: 100%;
-  position: relative;
-  color: black;
+  height: 100vh;
+  z-index: 3;
+  transition: 0.8s;
+  background-color: beige;
+  position: absolute;
+  top: 400%;
 }
