--- a/scss/palace css/palace.css
+++ b/scss/palace css/palace.css
@@ -44,17 +44,18 @@ header ul li {
 }
 
 figure {
-  position: absolute;
+  position: relative;
+  background-color: black;
   width: 100%;
-  height: 100%;
+  height: 700%;
   top: 0;
   left: 0;
   overflow: hidden;
 }
 figure video {
-  width: 1500px;
-  height: 700px;
-  margin: 202px 0px 147px;
+  width: 80%;
+  height: 500px;
+  margin: 150px 0px 147px;
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 1;
@@ -62,7 +63,7 @@ figure video {
 figure .text {
   position: absolute;
   right: 6vw;
-  top: 15%;
+  top: 40%;
   transform: translateY(-50%);
 }
 figure .text p {
@@ -74,6 +75,70 @@ figure .text p {
 section {
   width: 100%;
   height: 1000px;
+}
+
+.palace-kb {
+  margin: 0;
+  height: 100%;
+  background: #000;
+  font-family: sans-serif;
+  display: relative;
+  justify-content: center;
+  align-items: center;
+}
+.palace-kb .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10vmin;
+  overflow: hidden;
+  transform: skew(5deg);
+}
+.palace-kb .container .card {
+  flex: 1;
+  transition: all 1s ease-in-out;
+  height: 75vmin;
+  position: relative;
+}
+.palace-kb .container .card .card__head {
+  color: black;
+  background: rgba(78, 33, 61, 0.75);
+  padding: 0.5em;
+  transform: rotate(-90deg);
+  transform-origin: 0% 0%;
+  transition: all 0.5s ease-in-out;
+  min-width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 1em;
+  white-space: nowrap;
+}
+.palace-kb .container .card:active {
+  flex-grow: 10;
+}
+.palace-kb .container .card:active img {
+  filter: grayscale(0);
+}
+.palace-kb .container .card:active .card__head {
+  text-align: center;
+  top: calc(100% - 2em);
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+  font-size: 2em;
+  transform: rotate(0deg) skew(-5deg);
+}
+.palace-kb .container .card img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 1s ease-in-out;
+  filter: grayscale(100%);
+}
+.palace-kb .container .card:not(:nth-child(5)) {
+  margin-right: 1em;
 }
 
 #commonUpButton {
