--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -34,26 +34,26 @@ header {
 }
 
 figure {
-  position: absolute;
+  position: relative;
+  background-color: black;
   width: 100%;
-  height: 100%;
+  height: 700%;
   top: 0;  //위랑 왼쪽에 안튀어나가게
   left: 0;
   overflow: hidden;
 
   video {
-    width: 1500px;  
-    height: 700px;
-    margin: 202px 0px 147px;
+    width: 80%;  
+    height: 500px;
+    margin: 150px 0px 147px;
     object-fit: cover;
     z-index: 1;
-
    }
   
   .text {
     position: absolute;
     right: 6vw;
-    top: 15%;
+    top: 40%;
     transform: translateY(-50%);
       p {
       font: normal 7vw/1 "Tourney";
@@ -69,14 +69,74 @@ section {
   height: 1000px;
 }
 
-.kb {
-  .kb-container {
-    .kb-container-inner {
+//경복궁
+.palace-kb {
+  margin: 0;
+  height: 100%;
+  background: #000;
+  font-family: sans-serif;
+  display: relative;
+  justify-content: center;
+  align-items: center;
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10vmin;
+  overflow: hidden;
+  transform: skew(5deg);
+
+  .card {
+    flex: 1;
+    transition: all 1s ease-in-out;
+    height: 75vmin;
+    position: relative;
+    .card__head {
+      color: black;
+      background: rgba(78, 33, 61, 0.75);
+      padding: 0.5em;
+      transform: rotate(-90deg);
+      transform-origin: 0% 0%;
+      transition: all 0.5s ease-in-out;
+      min-width: 100%;
+      text-align: center;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      font-size: 1em;
+      white-space: nowrap;
+    }
+
+    &:active { //hover?
+      flex-grow: 10;
+      img {
+        filter: grayscale(0);
+      }
+      .card__head {
+        text-align: center;
+        top: calc(100% - 2em);
+        color: white;
+        background: rgba(0, 0, 0, 0.5);
+        font-size: 2em;
+        transform: rotate(0deg) skew(-5deg);
+      }
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: all 1s ease-in-out;
+      filter: grayscale(100%);
+    }
+    &:not(:nth-child(5)) {
+      margin-right: 1em;
     }
   }
-
 }
+}
+
+//덕수궁
 
 #commonUpButton {
   position: fixed;
