--- a/scss/drive css/drive.css
+++ b/scss/drive css/drive.css
@@ -5,12 +5,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #0c0b0d;
-  color: #fff;
-  position: relative;
-}
-
 ul,
 ol {
   list-style: none;
@@ -18,9 +12,16 @@ ol {
 
 a {
   text-decoration: none;
-  color: #fff;
 }
 
+@font-face {
+  font-family: "bitbit";
+  src: url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff"), url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff2");
+  font-family: "Cafe24Ssurround";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 header {
   position: relative;
   display: flex;
@@ -28,49 +29,41 @@ header {
   align-items: center;
   width: 100%;
   padding: 5vh 5vw;
-  z-index: 2;
-  background-color: transparent;
+  z-index: 9999;
 }
-header .logo {
-  position: absolute;
-  font: bold 2.5rem/50px "Tilt Prism";
+header h1 a {
+  font: bold 48px/50px "Tilt Prism";
   color: #fff;
 }
-header .logo:hover {
-  color: #fff260;
-}
-header .logo .slideup {
-  display: block;
-  position: absolute;
-  width: 100%;
-}
-header .thema {
-  font: bold 1.6rem "Tilt Prism";
-}
-header .thema ul {
+header .gnb {
   display: flex;
 }
-header .thema ul li {
+header .gnb li {
   margin: 0 20px;
 }
-header .thema ul li:not(:last-child) {
-  margin-right: 20px;
+header .gnb li a {
+  font: 24px "Tilt Prism";
+  letter-spacing: 1px;
+  color: white;
 }
-header .thema ul li:hover {
-  color: #fff260;
+header .gnb li a:hover {
+  font-weight: bold;
+  color: black;
 }
-header figure {
+
+figure {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: -100px;
+  top: 0;
   left: 0;
   overflow: hidden;
 }
-header figure video {
+figure video {
   width: 100%;
   height: 100%;
-  z-index: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @keyframes slideLeftOutRightIn {
@@ -96,42 +89,66 @@ header figure video {
   }
 }
 #two {
-  padding: 100px 30px;
-  background-color: #0c0b0d;
   position: relative;
+  width: 100%;
+  height: 150vh;
+  padding: 50px;
+  background-color: #0c0b0d;
+  margin-top: 80vh;
 }
 #two h1 {
   font-size: 34px;
-  margin-bottom: 54px;
+  margin-bottom: 36px;
+  color: #fff;
+  font-family: "Cafe24Ssurround";
 }
-#two .map {
+#two .drive--cos {
   position: relative;
   width: 100%;
-  height: 580px;
+  height: 460px;
   text-align: center;
-  font-size: 60px;
+  font-size: 4.8rem;
   color: #fff;
   margin: 0 auto;
 }
-#two .map .image {
+#two .drive--cos .image {
   position: absolute;
+  width: 45%;
+  height: 60vh;
   top: 0;
-  width: 50%;
-  height: 100%;
-  left: 50%;
-  transform: translateX(-400px);
+  left: 0;
+  margin-bottom: 50px;
+  border-radius: 5%;
+}
+#two .drive--cos .image1 {
+  z-index: 10;
+}
+#two .drive--cos p {
+  position: absolute;
+  width: 280px;
+  height: 50px;
+  top: 5%;
+  right: 30vw;
+  color: #fff;
+  font: bold 48px/50px "Cafe24Ssurround";
+}
+#two .drive--cos span {
+  position: absolute;
+  top: 18vh;
+  right: 34vw;
+  font: normal 36px/1 "Cafe24Ssurround";
 }
 #two .sub-btn {
   display: flex;
   justify-content: space-between;
-  width: 1090px;
+  width: 100%;
   position: relative;
-  margin: 36px auto 0;
+  margin: 24px auto 0;
 }
 #two .sub-btn .btn {
   display: block;
   background-color: #000;
-  width: 13%;
+  width: 10%;
   height: 100%;
   cursor: pointer;
   opacity: 0.5;
@@ -143,7 +160,7 @@ header figure video {
   content: "";
   position: absolute;
   top: 0;
-  width: 12%;
+  width: 3%;
   height: 3px;
   background-color: #fff;
 }
