--- a/scss/drive css/drive.scss
+++ b/scss/drive css/drive.scss
@@ -5,11 +5,21 @@
 // font-family: 'Gajraj One', cursive;
 // font-family: 'Tilt Prism', cursive; //Header
 // font-family: 'Tourney', cursive;
-
-//  //
+@font-face {
+  font-family: "bitbit";
+  src: url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff"),
+    url("//cdn.df.nexon.com/img/common/font/DNFBitBit-Regular.woff2");
+  font-family: "Cafe24Ssurround";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+// COMMON  //
 body {
 }
 // Header //
+
 header {
   position: relative;
   display: flex;
@@ -17,54 +27,45 @@ header {
   align-items: center;
   width: 100%;
   padding: 5vh 5vw;
-  z-index: 2;
-  background-color: transparent;
+  z-index: 9999;
 
-  .logo {
-    position: absolute;
-    font: bold 2.5rem/50px "Tilt Prism";
+  h1 a {
+    font: bold 48px/50px "Tilt Prism";
     color: #fff;
-
-    &:hover {
-      color: #fff260;
-    }
-
-    .slideup {
-      display: block;
-      position: absolute;
-      width: 100%;
-    }
   }
-  .thema {
-    font: bold 1.6rem "Tilt Prism";
 
-    ul {
-      display: flex;
-      li {
-        margin: 0 20px;
+  .gnb {
+    display: flex;
 
-        &:not(:last-child) {
-          margin-right: 20px;
-        }
+    li {
+      margin: 0 20px;
+
+      a {
+        font: 24px "Tilt Prism";
+        letter-spacing: 1px;
+        color: white;
+
         &:hover {
-          color: #fff260;
+          font-weight: bold;
+          color: black;
         }
       }
     }
   }
-  figure {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: -100px;
-    left: 0;
-    overflow: hidden;
-  }
+}
+// Video //
+figure {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
 
-  figure video {
+  video {
     width: 100%;
     height: 100%;
-    z-index: 1;
+    object-fit: cover;
   }
 }
 @keyframes slideLeftOutRightIn {
@@ -91,44 +92,70 @@ header {
 }
 
 #two {
-  padding: 100px 30px;
-  background-color: #0c0b0d;
   position: relative;
+  width: 100%;
+  height: 150vh;
+  padding: 50px;
+  background-color: #0c0b0d;
+  margin-top: 80vh;
 
   h1 {
     font-size: 34px;
-    margin-bottom: 54px;
+    margin-bottom: 36px;
+    color: #fff;
+    font-family: "Cafe24Ssurround";
   }
-  .map {
+  .drive--cos {
     position: relative;
     width: 100%;
-    height: 580px;
+    height: 460px;
     text-align: center;
-
-    font-size: 60px;
+    font-size: 4.8rem;
     color: #fff;
     margin: 0 auto;
 
     .image {
       position: absolute;
+      width: 45%;
+      height: 60vh;
       top: 0;
-      width: 50%;
-      height: 100%;
-      left: 50%;
-      transform: translateX(-400px);
+      left: 0;
+      margin-bottom: 50px;
+      border-radius: 5%;
+    }
+
+    .image1 {
+      z-index: 10;
+    }
+    p {
+      position: absolute;
+      width: 280px;
+      height: 50px;
+      top: 5%;
+      right: 30vw;
+      color: #fff;
+      font: bold 48px/50px "Cafe24Ssurround";
+    }
+    span {
+      position: absolute;
+      top: 18vh;
+      right: 34vw;
+
+      font: normal 36px/1 "Cafe24Ssurround";
     }
   }
+
   .sub-btn {
     display: flex;
     justify-content: space-between;
-    width: 1090px;
+    width: 100%;
     position: relative;
-    margin: 36px auto 0;
+    margin: 24px auto 0;
 
     .btn {
       display: block;
       background-color: #000;
-      width: 13%;
+      width: 10%;
       height: 100%;
       cursor: pointer;
       opacity: 0.5;
@@ -141,7 +168,7 @@ header {
         content: "";
         position: absolute;
         top: 0;
-        width: 12%;
+        width: 3%;
         height: 3px;
         background-color: #fff;
       }
