--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -35,9 +35,9 @@ header {
 
 figure {
   position: relative;
-  background-color: black;
+  background-color:#0c0b0d;
   width: 100%;
-  height: 700%;
+  height: 100%;
   top: 0;  //위랑 왼쪽에 안튀어나가게
   left: 0;
   overflow: hidden;
@@ -71,9 +71,11 @@ section {
 
 //경복궁
 .palace-kb {
-  margin: 0;
-  height: 100%;
-  background: #000;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 80%;
+  background-image: url('../../video/palace/background.jpg');
+  opacity: 3;
   font-family: sans-serif;
   display: relative;
   justify-content: center;
@@ -82,19 +84,21 @@ section {
 .container {
   display: flex;
   justify-content: center;
+  border: solid 5px rgb(159, 248, 190);
   align-items: center;
   margin: 10vmin;
   overflow: hidden;
   transform: skew(5deg);
-
+  
   .card {
     flex: 1;
     transition: all 1s ease-in-out;
     height: 75vmin;
+    border: solid 5px rgb(154, 236, 92);
     position: relative;
     .card__head {
-      color: black;
-      background: rgba(78, 33, 61, 0.75);
+      color: rgb(158, 32, 32);
+      background: rgb(239, 191, 227);
       padding: 0.5em;
       transform: rotate(-90deg);
       transform-origin: 0% 0%;
@@ -108,7 +112,7 @@ section {
       white-space: nowrap;
     }
 
-    &:active { //hover?
+    &:hover { 
       flex-grow: 10;
       img {
         filter: grayscale(0);
