--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -282,8 +282,14 @@ section {
     width: 100%;
     height: inherit;
     div {
+      display: flex;
+      flex-direction: row;
       width: 100%;
-      height: 33%;
+      height: 50%;
+    }
+    .reverse {
+      display: flex;
+      flex-direction: row-reverse;
     }
   }
 
