--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -281,16 +281,72 @@ section {
     flex-direction: column;
     width: 100%;
     height: inherit;
-    div {
+
+    .correct {
+      position: relative;
       display: flex;
       flex-direction: row;
+      align-items: center;
       width: 100%;
       height: 50%;
+      .correct-content {
+        perspective: 400px;
+        perspective-origin: right;
+        img {
+          width: 22%;
+          height: 100%;
+          opacity: 0.8;
+          margin: 1rem;
+          border-radius: 15px;
+          object-fit: cover;
+          box-shadow: 0 4px 5px 0 black;
+          transform: rotateY(12deg) translate(100px, 70px) rotatez(-3deg);
+        }
+      }
+      .descript {
+        position: absolute;
+        z-index: -1;
+        background: linear-gradient(to left, #4568dc, #b06ab3, transparent 90%);
+        height: 100%;
+        width: 100%;
+        text-align: center;
+      }
     }
+
     .reverse {
-      display: flex;
-      flex-direction: row-reverse;
+      position: relative;
+      width: 100%;
+      height: 50%;
+      .reverse-content {
+        position: relative;
+        display: flex;
+        flex-direction: row-reverse;
+        perspective: 500px;
+        z-index: 1;
+        img {
+          width: 25%;
+          height: 100%;
+          opacity: 0.9;
+          margin: 1rem;
+          border-radius: 15px;
+          object-fit: cover;
+          box-shadow: 0 4px 5px 0 black;
+          transform: rotateY(-12deg) translate(-80px, -40px) rotatez(3deg);
+        }
+      }
+      .arti {
+        width: 100%;
+        height: 100%;
+        bottom: 20%;
+        position: absolute;
+        z-index: -2;
+      }
     }
+  }
+
+  #slide3 {
+    display: flex;
+    flex-direction: row;
   }
 
   section.emptyground {
