--- a/scss/palace css/palace.scss
+++ b/scss/palace css/palace.scss
@@ -73,8 +73,8 @@ section {
 .palace-kb {
   margin-top: 20px;
   margin-bottom: 20px;
-  height: 80%;
-  background-image: url('../../video/palace/background.jpg');
+  height: 700px;
+  background-color: #000;
   opacity: 3;
   font-family: sans-serif;
   display: relative;
@@ -87,6 +87,7 @@ section {
   border: solid 5px rgb(159, 248, 190);
   align-items: center;
   margin: 10vmin;
+  margin-left: 200px;
   overflow: hidden;
   transform: skew(5deg);
   
@@ -141,6 +142,11 @@ section {
 }
 
 // 덕수궁
+.palace-ds {
+  position: relative;
+  height: 500px;
+  margin-bottom: 300px;
+
 .slider-container {
   position: absolute;
   overflow: hidden;
@@ -194,7 +200,7 @@ section {
   position: absolute;
   top: 0%;
   left: 35%;
-  width: 65%;
+  width: 100%;
   transition: transform 0.5s ease-in-out;
   background-color: #FD3555;
 
@@ -259,22 +265,17 @@ button {
     }
   }
 }
+}
 
 
 // 창경궁
 .container {
   position: relative;
+  width: 100%;
+  height: 70%;
 
   .mySlides {
     display: none;
-
-    .numbertext {
-      color: #f2f2f2;
-      font-size: 12px;
-      padding: 8px 12px;
-      position: absolute;
-      top: 0;
-    }
     
   }
 
