--- a/scss/drive css/drive.scss
+++ b/scss/drive css/drive.scss
@@ -19,7 +19,6 @@
 body {
 }
 // Header //
-
 header {
   position: relative;
   display: flex;
@@ -94,7 +93,7 @@ figure {
 #two {
   position: relative;
   width: 100%;
-  height: 150vh;
+  height: 120vh;
   padding: 50px;
   background-color: #0c0b0d;
   margin-top: 80vh;
@@ -127,21 +126,29 @@ figure {
     .image1 {
       z-index: 10;
     }
-    p {
-      position: absolute;
-      width: 280px;
-      height: 50px;
-      top: 5%;
-      right: 30vw;
-      color: #fff;
-      font: bold 48px/50px "Cafe24Ssurround";
+    .image5 {
+      z-index: 5;
     }
-    span {
+    .drive {
       position: absolute;
-      top: 18vh;
-      right: 34vw;
-
-      font: normal 36px/1 "Cafe24Ssurround";
+      right: 0;
+      width: 50%;
+      height: 100%;
+      padding: 1vh 1vw;
+      text-align: left;
+      p {
+        width: 280px;
+        height: 50px;
+        color: #fff;
+        font: bold 48px/50px "Cafe24Ssurround";
+        margin-bottom: 24px;
+      }
+      span {
+        display: inline-block;
+        width: 100%;
+        font: normal 24px "Cafe24Ssurround";
+        margin-bottom: 24px;
+      }
     }
   }
 
@@ -216,4 +223,43 @@ figure {
     top: 120px;
     transform: translateX(100px);
   }
+}
+
+// Drive Car //
+.experience {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 2;
+}
+
+.scrollTarget {
+  position: absolute;
+  height: 1000vh;
+  width: 100px;
+  top: 0;
+  z-index: 0;
+}
+
+.vignette-radial {
+  position: fixed;
+  z-index: 11;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  pointer-events: none;
+}
+
+.vignette-radial:after {
+  pointer-events: none;
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: radial-gradient(circle, transparent 60%, black 150%);
 }
