--- a/scss/mainpage css/style.css
+++ b/scss/mainpage css/style.css
@@ -1,18 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Gajraj+One&family=Tilt+Prism&family=Tourney:wght@200&display=swap");
 .morpContainer {
-  z-index: 2;
+  z-index: -2;
   opacity: 0;
   transition: 1.5s;
   font-family: "Gajraj One", cursive;
-  font-size: 110px;
+  font-size: 80px;
   color: #fff;
   filter: contrast(20) blur(1px);
 }
 
 .word {
+  line-height: 4.5rem;
   position: absolute;
-  top: 10vh;
-  left: 35%;
+  top: 30vh;
+  left: 15%;
   transform: translate(-50%, -50%);
   animation: word 8s infinite ease-in-out;
 }
@@ -69,29 +70,55 @@ a {
   color: #fff;
 }
 
+@font-face {
+  font-family: "Druk Wide Web Super";
+  src: url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.eot"); /* IE9*/
+  src: url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.eot?#iefix") format("embedded-opentype"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.woff2") format("woff2"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.woff") format("woff"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.ttf") format("truetype"), url("http://db.onlinewebfonts.com/t/2f8845bdde42e943355a39765c5be5c0.svg#Druk Wide Web Super") format("svg"); /* iOS 4.1- */
+}
+body {
+  background-color: black;
+  overflow-y: hidden;
+}
+
+a {
+  color: yellow;
+  transition: 0.5s;
+}
+
 nav {
   z-index: 1;
   position: absolute;
-  width: 50vw;
+  width: 90vw;
   right: 0;
 }
 nav ul {
   position: absolute;
-  top: 8vh;
-  right: 4vw;
-  animation: dropDown 2.5s;
+  top: 5vh;
+  right: 0;
+  animation: dropDown 2s;
+  perspective: 500px;
+  perspective-origin: left;
 }
 nav ul li {
-  font: bold 3rem/15vh "Tourney";
-  letter-spacing: 2px;
-  transition: 2.5s;
+  margin-top: 4vh;
+  text-align: right;
+  font: bold 5rem/10vh "Druk Wide Web Super";
+  letter-spacing: 1.8px;
+  transition: 2s;
   transform-origin: right center;
   opacity: 0;
-  animation: rotate 2s;
+  animation: rotate 0.8s;
   animation-fill-mode: forwards;
+  transform: rotateY(-12deg) translate(-50px, -30px) rotatez(1deg);
+}
+nav ul li:hover {
+  transition: 0.5s;
+  transform: rotateY(-8deg) translate(-50px, -30px) rotatez(1deg);
 }
 nav ul li:hover a {
   background: linear-gradient(to top, #fbf13a 10%, transparent 50%);
+  color: transparent;
+  -webkit-text-stroke: 2px yellow;
 }
 
 figure {
@@ -100,7 +127,7 @@ figure {
 figure video {
   width: 100vw;
   height: 75vh;
-  opacity: 0.6;
+  opacity: 1;
   -o-object-fit: fill;
      object-fit: fill;
 }
@@ -118,7 +145,7 @@ figure video {
     transform: rotateY(-80deg);
   }
   100% {
-    transform: rotateY(-6deg);
+    transform: rotateY(-12deg) translate(-50px, -30px) rotatez(1deg);
   }
 }
 @media screen and (max-width: 1250px), (max-height: 600px) {
