--- a/scss/view css/view.scss
+++ b/scss/view css/view.scss
@@ -281,7 +281,7 @@ section {
     flex-direction: column;
     width: 100%;
     height: inherit;
-
+    background: linear-gradient(to left, #141e30, #243b55, transparent 90%);
     .correct {
       position: relative;
       display: flex;
@@ -293,11 +293,12 @@ section {
         perspective: 400px;
         perspective-origin: right;
         img {
-          width: 22%;
+          width: 20%;
           height: 100%;
           opacity: 0.8;
           margin: 1rem;
           border-radius: 15px;
+          border: 3px solid #0eff7a;
           object-fit: cover;
           box-shadow: 0 4px 5px 0 black;
           transform: rotateY(12deg) translate(100px, 70px) rotatez(-3deg);
@@ -306,7 +307,6 @@ section {
       .descript {
         position: absolute;
         z-index: -1;
-        background: linear-gradient(to left, #4568dc, #b06ab3, transparent 90%);
         height: 100%;
         width: 100%;
         text-align: center;
@@ -329,6 +329,7 @@ section {
           opacity: 0.9;
           margin: 1rem;
           border-radius: 15px;
+          border: 3px solid #0eff7a;
           object-fit: cover;
           box-shadow: 0 4px 5px 0 black;
           transform: rotateY(-12deg) translate(-80px, -40px) rotatez(3deg);
